# RDMA_Communication_Patterns

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindCPPUNIT.cmake  FindIntelAmplifier.cmake
src/: .gitignore  CMakeLists.txt  dispatcherMain.cc  main.cc  sharedMemMain.cc
src/benchmark/: BenchmarkDispatcher.h  BenchmarkDriver.cc  BenchmarkDriver.h  BenchmarkReceiver.h  BenchmarkSender.h  CMakeLists.txt  Defs.h  Messages.h
src/net/src/: CMakeLists.txt
src/net/src/RPC/: CMakeLists.txt  RPCHandlerThread.h  RPCMemory.h  RPCVoidHandlerThread.h
src/net/src/conf/: RDMA.conf
src/net/src/message/: CMakeLists.txt  ErrorMessage.proto  GetAllNodeIDsRequest.proto  GetAllNodeIDsResponse.proto  GetNodeIDForIpPortRequest.proto  GetNodeIDForIpPortResponse.proto  HelloMessage.proto  MemoryResourceRequest.proto  MemoryResourceResponse.proto  MessageErrors.h  NodeIDRequest.proto  NodeIDResponse.proto  ProtoMessageFactory.h  RDMAConnRequest.proto  RDMAConnRequestMgmt.proto  RDMAConnResponse.proto  RDMAConnResponseMgmt.proto
src/net/src/proto/: CMakeLists.txt  ProtoClient.cc  ProtoClient.h  ProtoSendSocket.cc  ProtoSendSocket.h  ProtoServer.cc  ProtoServer.h  ProtoSocket.cc  ProtoSocket.h  zmq.hpp
src/net/src/rdma/: BaseRDMA.cc  BaseRDMA.h  CMakeLists.txt  NodeIDSequencer.cc  NodeIDSequencer.h  RDMAClient.h  RDMAClientSRQ.h  RDMAServer.h  ReliableRDMA.cc  ReliableRDMA.h  UnreliableRDMA.cc  UnreliableRDMA.h
src/net/src/thread/: CMakeLists.txt  Thread.cc  Thread.h
src/net/src/utils/: CMakeLists.txt  Config.cc  Config.h  CpuNumaUtils.h  Filehelper.h  Logging.h  Network.h  RdmaCounter.h  StringHelper.h  Timer.h
src/utils/: CMakeLists.txt  Concurrency.h  PerfEvent.hpp
